Colaboratory를 통해 생성됨

--- a/06_decision_tree.ipynb
+++ b/06_decision_tree.ipynb
@@ -6,7 +6,7 @@
       "name": "06. decision tree.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMv866lZAJBNJoi82eL2aT1",
+      "authorship_tag": "ABX9TyMphkxnc7+iZhB6ZRZSLNw/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,16 +60,16 @@
       "metadata": {
         "id": "qPVukbmN1mqk",
         "colab_type": "code",
-        "outputId": "45f66548-7ea8-47fa-91e5-ab793c53681e",
+        "outputId": "4b7cec1d-b664-40a2-9719-b69e92fa6344",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         }
       },
       "source": [
-        ""
+        "print(breast_cancer.DESCR)"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
